delete fixed pos on mobile

--- a/src/components/MessageForm/MessageForm.module.css
+++ b/src/components/MessageForm/MessageForm.module.css
@@ -65,7 +65,6 @@
 }
 @media (min-width: 320px) and (max-width: 767px) {
   .messageInputContainer {
-    position: fixed;
     width: 260px;
   }
 }
